// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots ClaimPaper with ClaimBody 1`] = `
<div
  className="MuiPaper-root MuiPaper-elevation1 Component-root-153 Component-root-154 Component-root-152 MuiPaper-rounded"
>
  <h5
    className="MuiTypography-root WithStyles(ForwardRef(Typography))-root-182 WithStyles(ForwardRef(Typography))-root-183 MuiTypography-h5 MuiTypography-colorTextPrimary MuiTypography-alignCenter"
  >
    This is a claim body
  </h5>
</div>
`;

exports[`Storyshots Claims Evidence 1`] = `
<div
  className="MuiPaper-root MuiPaper-elevation0 MuiPaper-rounded MuiExpansionPanel-root MuiExpansionPanel-rounded Component-root-320"
>
  <div
    aria-disabled={false}
    aria-expanded={false}
    className="MuiButtonBase-root MuiExpansionPanelSummary-root Component-root-352"
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    role="button"
    tabIndex={0}
  >
    <div
      className="MuiExpansionPanelSummary-content Component-content-353"
    >
      <div
        className="MuiBox-root MuiBox-root-364"
      >
        <div
          className="MuiBox-root MuiBox-root-365"
          onClick={[Function]}
        >
          <button
            aria-haspopup="true"
            className="MuiButtonBase-root MuiButton-root WithStyles(ForwardRef(Button))-root-368 WithStyles(ForwardRef(Button))-root-369 Component-root-366 Component-root-367 MuiButton-text"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            tabIndex={0}
            type="button"
          >
            <span
              className="MuiButton-label"
            >
              66
              %
            </span>
          </button>
        </div>
      </div>
      <div
        className="MuiBox-root MuiBox-root-388"
      >
        <h6
          className="MuiTypography-root MuiTypography-h6 WithStyles(ForwardRef(Typography))-root-389 WithStyles(ForwardRef(Typography))-root-390"
        >
          <a
            className="MuiTypography-root MuiTypography-colorInherit MuiLink-root MuiLink-underlineHover UnstyledLink-root-421 UnstyledLink-root-422"
            href="/somesay/this-is-another-claim"
            onClick={[Function]}
          >
            This is a claim that stretches the limits of this system. It has precisely 255 characters, the maximum number of characters that a claim can have and still be valid. Anything longer than this will be rejected by the system because it is too long. Goodbye.
          </a>
        </h6>
        <div
          className="MuiBox-root MuiBox-root-428"
          onClick={[Function]}
        >
          <button
            className="MuiButtonBase-root MuiButton-root WithStyles(ForwardRef(Button))-root-368 WithStyles(ForwardRef(Button))-root-429 MuiButton-text"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            tabIndex={0}
            type="button"
          >
            <span
              className="MuiButton-label"
            >
              I agree
            </span>
          </button>
          <button
            className="MuiButtonBase-root MuiButton-root WithStyles(ForwardRef(Button))-root-368 WithStyles(ForwardRef(Button))-root-430 MuiButton-text"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            tabIndex={0}
            type="button"
          >
            <span
              className="MuiButton-label"
            >
              I'm not sure
            </span>
          </button>
          <button
            className="MuiButtonBase-root MuiButton-root WithStyles(ForwardRef(Button))-root-368 WithStyles(ForwardRef(Button))-root-431 MuiButton-text"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            tabIndex={0}
            type="button"
          >
            <span
              className="MuiButton-label"
            >
              I disagree
            </span>
          </button>
        </div>
      </div>
    </div>
    <div
      aria-disabled={false}
      aria-hidden={true}
      className="MuiButtonBase-root MuiIconButton-root MuiIconButton-edgeEnd MuiExpansionPanelSummary-expandIcon"
      onBlur={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      role="button"
      tabIndex={-1}
    >
      <span
        className="MuiIconButton-label"
      >
        <svg
          aria-hidden="true"
          className="MuiSvgIcon-root"
          focusable="false"
          role="presentation"
          viewBox="0 0 24 24"
        >
          <path
            d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z"
          />
          <path
            d="M0 0h24v24H0z"
            fill="none"
          />
        </svg>
      </span>
    </div>
  </div>
  <div
    className="MuiCollapse-container MuiCollapse-hidden"
    style={
      Object {
        "minHeight": "0px",
      }
    }
  >
    <div
      className="MuiCollapse-wrapper"
    >
      <div
        className="MuiCollapse-wrapperInner"
      >
        <div
          role="region"
        >
          <div
            className="MuiExpansionPanelDetails-root"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Claims SupportList 1`] = `""`;

exports[`Storyshots Claims default 1`] = `
<div
  className="MuiGrid-root WithStyles(ForwardRef(Grid))-root-214 WithStyles(ForwardRef(Grid))-root-215 MuiGrid-container MuiGrid-spacing-xs-1"
/>
`;

exports[`Storyshots Header default 1`] = `
<header>
  <header
    className="MuiPaper-root MuiPaper-elevation4 MuiAppBar-root MuiAppBar-positionStatic MuiAppBar-colorDefault"
  >
    <div
      className="MuiToolbar-root MuiToolbar-regular MuiToolbar-gutters WithStyles(ForwardRef(Toolbar))-root-70 WithStyles(ForwardRef(Toolbar))-root-71"
    >
      <button
        aria-haspopup="true"
        className="MuiButtonBase-root MuiButton-root WithStyles(ForwardRef(Button))-root-76 WithStyles(ForwardRef(Button))-root-77 MuiButton-text"
        disabled={false}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex={0}
        type="button"
      >
        <span
          className="MuiButton-label"
        >
          <img
            alt="logo"
            className="Component-logo-98"
            src="logo.svg"
          />
        </span>
      </button>
      <h6
        className="MuiTypography-root MuiTypography-h6 WithStyles(ForwardRef(Typography))-root-102 WithStyles(ForwardRef(Typography))-root-103 Component-ohhey-33"
      >
        <a
          className="MuiTypography-root MuiTypography-colorInherit MuiLink-root MuiLink-underlineHover UnstyledLink-root-134 UnstyledLink-root-135"
          href="/"
          onClick={[Function]}
        >
          oh hey!
        </a>
      </h6>
      <button
        aria-haspopup="true"
        className="MuiButtonBase-root MuiButton-root WithStyles(ForwardRef(Button))-root-76 WithStyles(ForwardRef(Button))-root-141 MuiButton-text"
        disabled={false}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex={0}
        type="button"
      >
        <span
          className="MuiButton-label"
        >
          <svg
            aria-hidden="true"
            className="MuiSvgIcon-root MuiSvgIcon-colorPrimary"
            focusable="false"
            role="presentation"
            viewBox="0 0 24 24"
          >
            <path
              d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 3c1.66 0 3 1.34 3 3s-1.34 3-3 3-3-1.34-3-3 1.34-3 3-3zm0 14.2c-2.5 0-4.71-1.28-6-3.22.03-1.99 4-3.08 6-3.08 1.99 0 5.97 1.09 6 3.08-1.29 1.94-3.5 3.22-6 3.22z"
            />
            <path
              d="M0 0h24v24H0z"
              fill="none"
            />
          </svg>
        </span>
      </button>
    </div>
  </header>
</header>
`;

exports[`Storyshots Sources default 1`] = `
<div
  className="MuiBox-root MuiBox-root-591"
>
  <sup
    className="Component-sup-587"
    onMouseEnter={[Function]}
  >
    [
    <span
      className="Component-note-588"
    >
      *
    </span>
    ]
  </sup>
</div>
`;

exports[`Storyshots UI components ClaimPaper 1`] = `
<div
  className="MuiPaper-root MuiPaper-elevation1 Component-root-4 Component-root-5 Component-root-3 MuiPaper-rounded"
>
  This is some paper on which to write a claim.
</div>
`;

exports[`Storyshots UI components Spinner 1`] = `
<div
  className="sk-fade-in sk-spinner Spinner-root-1 Spinner-root-2 sk-chasing-dots"
>
  <div />
  <div />
</div>
`;

exports[`Storyshots UserClaim default 1`] = `
<div
  className="MuiPaper-root MuiPaper-elevation1 MuiPaper-rounded Component-root-457 Component-root-458 Component-root-456"
>
  <div
    className="MuiToolbar-root MuiToolbar-regular MuiToolbar-gutters WithStyles(ForwardRef(Toolbar))-root-486 WithStyles(ForwardRef(Toolbar))-root-487"
  >
    <div
      className="MuiBox-root MuiBox-root-493"
    />
    <div
      className="MuiBox-root MuiBox-root-494"
    >
      <a
        className="MuiTypography-root MuiTypography-colorInherit MuiLink-root MuiLink-underlineHover UnstyledLink-root-495 UnstyledLink-root-496"
        href="/somesay/this-is-a-claim"
        onClick={[Function]}
      >
        <svg
          aria-hidden="true"
          className="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit"
          focusable="false"
          role="presentation"
          viewBox="0 0 24 24"
        >
          <path
            d="M0 0h24v24H0z"
            fill="none"
          />
          <path
            d="M16 11c1.66 0 2.99-1.34 2.99-3S17.66 5 16 5c-1.66 0-3 1.34-3 3s1.34 3 3 3zm-8 0c1.66 0 2.99-1.34 2.99-3S9.66 5 8 5C6.34 5 5 6.34 5 8s1.34 3 3 3zm0 2c-2.33 0-7 1.17-7 3.5V19h14v-2.5c0-2.33-4.67-3.5-7-3.5zm8 0c-.29 0-.62.02-.97.05 1.16.84 1.97 1.97 1.97 3.45V19h6v-2.5c0-2.33-4.67-3.5-7-3.5z"
          />
        </svg>
      </a>
      <button
        className="MuiButtonBase-root MuiButton-root WithStyles(ForwardRef(Button))-root-542 WithStyles(ForwardRef(Button))-root-543 Styled(WithStyles(ForwardRef(Button)))-root-541 MuiButton-text"
        disabled={false}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex={0}
        type="button"
      >
        <span
          className="MuiButton-label"
        >
          <svg
            aria-hidden="true"
            className="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit"
            focusable="false"
            role="presentation"
            viewBox="0 0 24 24"
          >
            <path
              d="M0 0h24v24H0z"
              fill="none"
            />
            <path
              d="M18 16.08c-.76 0-1.44.3-1.96.77L8.91 12.7c.05-.23.09-.46.09-.7s-.04-.47-.09-.7l7.05-4.11c.54.5 1.25.81 2.04.81 1.66 0 3-1.34 3-3s-1.34-3-3-3-3 1.34-3 3c0 .24.04.47.09.7L8.04 9.81C7.5 9.31 6.79 9 6 9c-1.66 0-3 1.34-3 3s1.34 3 3 3c.79 0 1.5-.31 2.04-.81l7.12 4.16c-.05.21-.08.43-.08.65 0 1.61 1.31 2.92 2.92 2.92 1.61 0 2.92-1.31 2.92-2.92s-1.31-2.92-2.92-2.92z"
            />
          </svg>
        </span>
      </button>
    </div>
  </div>
  <h6
    className="MuiTypography-root MuiTypography-subtitle1 MuiTypography-colorTextPrimary MuiTypography-alignCenter WithStyles(ForwardRef(Typography))-root-576 WithStyles(ForwardRef(Typography))-root-577"
  >
    @
    toby
     believes 
  </h6>
  <h5
    className="MuiTypography-root MuiTypography-h5 MuiTypography-colorTextPrimary MuiTypography-alignCenter WithStyles(ForwardRef(Typography))-root-576 WithStyles(ForwardRef(Typography))-root-578"
  >
    <a
      className="MuiTypography-root MuiTypography-colorInherit MuiLink-root MuiLink-underlineHover UnstyledLink-root-495 UnstyledLink-root-579"
      href="/somesay/this-is-a-claim"
      onClick={[Function]}
    >
      This is a claim
    </a>
  </h5>
  <p
    className="MuiTypography-root MuiTypography-body1 MuiTypography-alignCenter WithStyles(ForwardRef(Typography))-root-576 WithStyles(ForwardRef(Typography))-root-580"
  >
    <button
      className="MuiButtonBase-root MuiButton-root WithStyles(ForwardRef(Button))-root-542 WithStyles(ForwardRef(Button))-root-581 MuiButton-text"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex={0}
      type="button"
    >
      <span
        className="MuiButton-label"
      >
        I agree
      </span>
    </button>
    <button
      className="MuiButtonBase-root MuiButton-root WithStyles(ForwardRef(Button))-root-542 WithStyles(ForwardRef(Button))-root-582 MuiButton-text"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex={0}
      type="button"
    >
      <span
        className="MuiButton-label"
      >
        I'm not sure
      </span>
    </button>
    <button
      className="MuiButtonBase-root MuiButton-root WithStyles(ForwardRef(Button))-root-542 WithStyles(ForwardRef(Button))-root-583 MuiButton-text"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex={0}
      type="button"
    >
      <span
        className="MuiButton-label"
      >
        I disagree
      </span>
    </button>
  </p>
  <div>
    
    
    
    
  </div>
</div>
`;
